superscript and subscript

--- a/first.html
+++ b/first.html
@@ -29,7 +29,12 @@
     <p>Its a potato <i>Solanum teberosum</i>.</p>
 
     <p>Captain Cook sailed to Australia on the <i>Endeavour</i>.</p>
+
+    <p>On the 4<sup>th</sup> of september you will learn about E=MC<sup>2</sup>.</p>
+
+    <p>The amount of CO<sub>2</sub> in the atmosphere grew 2ppm in 2009<sub>1</sub>.</p>
     
+
 
 </body>
 
