--- a/first.html
+++ b/first.html
@@ -36,11 +36,17 @@
 
     <p>The moon is drifting away from Earth.</p>
 
-    <p>The moon        is drifting away from Earth.</p>
+    <p>The moon is drifting away from Earth.</p>
 
-    <p>The moon is drifting away from 
+    <p>The moon is drifting away from
         Earth.</p>
-    
+
+    <p>The Earth<br />gets one hundred tons heavier everyday<br/ >due to falling space dust.</p>
+
+    <p>Venus is the only planet that rotates clockwise</p>
+    <hr />
+    <p>Jupiter is bigger than all the other planets combined.</p>
+
 
 </body>
 
