Strong and Emphasis

--- a/first.html
+++ b/first.html
@@ -47,6 +47,13 @@
     <hr />
     <p>Jupiter is bigger than all the other planets combined.</p>
 
+    <p><strong>Beware:</strong> Pickpockets operate in this area.</p>
+    <p>This toy has many small pieces and is <strong>not suitable for children under five years old</strong>.</p>
+
+    <p>I <em>think</em> Ivy was the first.</p>
+    <p>I think <em>Ivy</em> was the first.</p>
+    <p>I think Ivy was the <em>first</em>.</p>
+
 
 </body>
 
