--- a/first.html
+++ b/first.html
@@ -41,7 +41,7 @@
     <p>The moon is drifting away from
         Earth.</p>
 
-    <p>The Earth<br />gets one hundred tons heavier everyday<br/ >due to falling space dust.</p>
+    <p>The Earth<br />gets one hundred tons heavier everyday<br />due to falling space dust.</p>
 
     <p>Venus is the only planet that rotates clockwise</p>
     <hr />
@@ -53,6 +53,11 @@
     <p>I <em>think</em> Ivy was the first.</p>
     <p>I think <em>Ivy</em> was the first.</p>
     <p>I think Ivy was the <em>first</em>.</p>
+
+    <blockquote cite="http://en.wikipedia.org/wiki/Winnie-the-pooh">
+        <p>Did you ever stop to think, and forgot to start again?</p>
+    </blockquote>
+    <p>As A.A. Milne said. <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
 
 
 </body>
