Abbreveations and Acronyms

--- a/first.html
+++ b/first.html
@@ -59,6 +59,9 @@
     </blockquote>
     <p>As A.A. Milne said. <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
 
+    <p><abbr title="Professor">Prof</abbr> Stephen Hawkins is a theoretical physicist and cosmologist.</p>
+    <p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space</p>
+
 
 </body>
 
