Citations and Definitions

--- a/first.html
+++ b/first.html
@@ -60,7 +60,11 @@
     <p>As A.A. Milne said. <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
 
     <p><abbr title="Professor">Prof</abbr> Stephen Hawkins is a theoretical physicist and cosmologist.</p>
-    <p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space</p>
+    <p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space stuff.</p>
+
+    <p><cite>A brief history of time</cite> by Stephen Hawkins has sold over ten million copies Worldwide.</p>
+
+    <p>A <dfn> black hole</dfn> is a region of space from which nothing, not even light, can escape.</p>
 
 
 </body>
