changes to content

--- a/first.html
+++ b/first.html
@@ -71,6 +71,12 @@
         <p>742 Evergreen Terrace, Springfield</p>
     </address>
 
+    <p>It was the <del>worst</del> <ins>best</ins> idea she ever had.</p>
+
+    <p>Laptop computer:</p>
+    <p><s>Was $995</s></p>
+    <p>Now only $375</p>
+
 
 </body>
 
